# Bachelor-Thesis

./: .gitignore  .vimproject  Makefile  README.mdown  bachelortopic.sem
implementation/: Makefile  README.mdown
implementation/pywhile/: CHANGES.txt  README.txt  setup.py  while.py
implementation/pywhile/docs/: 01installation.txt  04MetaProgramming.txt
implementation/pywhile/lib/: __init__.py  ast.py  executor.py  output.py  parser.py
implementation/pywhile/pywhile/: __init__.py  ast.py  collectors.py  exceptions.py  executor.py  output.py  parser.py
implementation/turing/: Makefile  addition.tm  eval-turing  example.tm  turing.cabal
implementation/turing/src/: eval.hs
implementation/turing/src/Turing/: Parser.hs  Runner.hs
implementation/turing_haskell/: Parser.hs  Parser.y  Runner.hs  example.tm  parse  parse.hs  syntaxData.hs
implementation/turing_rpython/: target_turing.py  translate.py  turing.py  turing_lang.py
implementation/while/: .gitignore  Makefile  Parser.hs  TODO  const_binary_10.wl  error.wl  eval-while  example.wl  function_call.wl  while.cabal
implementation/while/examples/: eq.wl  error.wl  error_parse.wl  example.wl  for.wl  function_call.wl  identity.wl  simple_call.wl  spec.wl  symbol.wl  turing.wl
implementation/while/src/: Data.hs  data.hs  eval-for.hs  eval-while.hs  eval.hs  statement.hs
implementation/while/src/While/: AsData.hs  Base.hs  Data.hs  DataExpression.hs  Dialect.hs  Evaluate.hs  FromData.hs  Helpers.hs  Parser.hs  ProgramType.hs  Statement.hs  Tree.hs
implementation/while/src/While/Parser/: Data.hs  DataExpression.hs  ProgramType.hs  Statement.hs
presentation/: main.tex
text/: .gitignore  Makefile  README.mdown  abstract.tex  abstract.tex.aux.orig  appendix.tex  biblio.bib  main.bbl  main.blg  main.tex
text/complexity/: complexity.tex  main.tex  main.tex.aux.orig
text/complexity/complexity/: complexity.tex
text/complexity/hierarchy/: hierarchy.tex
text/complexity/langcomplexity/: langcomplexity.tex
text/complexity/robustness/: robustness.tex
text/computability/completeness/: completeness.tex
text/computability/completeness/pictures/: binary-adder.dot  binary-adder.eps  multitape.eps  turingtape.eps
text/computability/self/: self.tex
text/computability/transforms/: transforms.tex
text/for/: for.tex
text/introduction/: introduction.tex
text/introduction/for/: for.tex
text/introduction/for/images/: conscell.eps
text/introduction/introduction/: introduction.tex
text/introduction/while/: while.tex
text/robustness/: robustness.tex
text/self/: chapter2.tex.aux.orig  main.tex
text/transforms/: chapter3.aux.orig  chapter3.tex.aux.orig  main.tex  transforms.tex
text/while/: chapter1.tex.aux.orig  main.tex  while.tex
text/while/images/: cons_cell.eps_tex
while-tutorial/: 02HelloWorld.mdown  03Advanced.mdown
