name: while
version: 0.0.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer:
build-depends: HUnit -any, base -any, parsec -any, haskell98 -any, mtl -any,
				containers -any
stability: None whatsoever
homepage:
package-url:
bug-reports:
synopsis: Implementation of the while language
description: Implements the very basic programming language WHILE.
				It is useful for computability introductions.
 
executable: while-data
main-is: data.hs
buildable: True
hs-source-dirs: src,src/While
 
executable: parser
main-is: statement.hs
buildable: True
hs-source-dirs: src, src/While

executable: eval-while
main-is: eval.hs
buildable: True
hs-source-dirs: src, src/While
