name: while
version: 0.1.1
cabal-version: -any
build-type: Simple
license: AllRightsReserved
license-file: ""
copyright:
maintainer: Aaron Karper
				containers -any
stability: None whatsoever
homepage:
package-url:
bug-reports:
synopsis: Implementation of the while language
description: Implements the very basic programming language WHILE.
				It is useful for computability introductions.
build-depends:
    base,
    containers,
    parsec,
    mtl

executable: while-data
main-is: data.hs
buildable: True
hs-source-dirs: src,src/While

executable: parser
main-is: statement.hs
buildable: True
hs-source-dirs: src, src/While

executable: eval-while
main-is: eval-while.hs
buildable: True
hs-source-dirs: src, src/While

executable: eval-for
main-is: eval-for.hs
buildable: True
hs-source-dirs: src, src/While
